--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           components: clippy
       - uses: Swatinem/rust-cache@v2
+      - name: Install target
+        run: rustup target add thumbv7em-none-eabihf
       - name: Clippy
         run: cargo +nightly clippy -- --deny warnings
 
