--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: clippy
+          targets: thumbv7em-none-eabihf
       - uses: Swatinem/rust-cache@v2
-      - name: Install target
-        run: rustup target add thumbv7em-none-eabihf
       - name: Clippy
         run: cargo +nightly clippy -- --deny warnings
 
