--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
     branches: [main, master]
+    tags:
+      - 'v*'
   pull_request:
     branches: [main, master]
 
@@ -68,3 +70,35 @@ jobs:
         with:
           name: fap
           path: target/thumbv7em-none-eabihf/release/flipper-xiaomi-filter-reset.fap
+
+  release:
+    name: Create Release
+    needs: [fmt, clippy, audit, build]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly-2025-08-31
+          targets: thumbv7em-none-eabihf
+      - name: Build
+        run: cargo build --release
+        env:
+          CARGO_INCREMENTAL: 0
+      - name: Extract tag message
+        id: tag_message
+        run: |
+          TAG_MESSAGE=$(git tag -l --format='%(contents)' ${{ github.ref_name }})
+          echo "message<<EOF" >> $GITHUB_OUTPUT
+          echo "$TAG_MESSAGE" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: target/thumbv7em-none-eabihf/release/flipper-xiaomi-filter-reset.fap
+          body: ${{ steps.tag_message.outputs.message }}
+          draft: false
+          prerelease: false
