--- a/.gitea/workflows/ci.yml
+++ b/.gitea/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
   mirror-to-github:
     name: Mirror to GitHub
     needs: [fmt, clippy, audit]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
     runs-on: node-latest
     steps:
       - name: Mirror - Checkout repo
@@ -65,4 +65,4 @@ jobs:
           git config --global user.name "Sapient Engineer"
           git remote add gh "https://x-access-token:$GITHUB_PAT@github.com/Sapiens-Engineering/flipper-zero-air-filter-reset.git"
           git fetch origin
-          git push gh HEAD:master --force
+          git push gh HEAD:master --tags --force
