--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
   build:
     name: Build FAP
     runs-on: ubuntu-latest
+    needs: [fmt, clippy, audit]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@master
@@ -91,24 +92,6 @@ jobs:
         run: cargo build --release
         env:
           CARGO_INCREMENTAL: 0
-      - name: Debug tag info
-        run: |
-          echo "=== Git version ==="
-          git --version
-          echo "=== Ref info ==="
-          echo "github.ref: ${{ github.ref }}"
-          echo "github.ref_name: ${{ github.ref_name }}"
-          echo "=== List all tags ==="
-          git tag -l
-          echo "=== Show refs ==="
-          git show-ref --tags || true
-          echo "=== Try git tag -l ==="
-          git tag -l --format='%(contents)' ${{ github.ref_name }} || true
-          echo "=== Try for-each-ref ==="
-          git for-each-ref --format='%(contents)' ${{ github.ref }} || true
-          echo "=== Try cat-file on ref ==="
-          git cat-file -t ${{ github.ref }} || true
-          git cat-file -p ${{ github.ref }} || true
       - name: Extract tag message
         id: tag_message
         run: |
